--- a/index.html
+++ b/index.html
@@ -243,6 +243,15 @@
     <!-- Параметры оракула -->    
     <h2 class="lntxt">OO Parameters</h2>
     <hr />
+    <small>
+    <p>Optimistic oracle reward amount, pulled from the caller of the expire function</p>
+    <p><input maxlength="25" name="proposerReward" size="25" type="text" /></p>
+    <p>Optimistic oracle liveness time for price requests</p>
+    <p><input maxlength="25" name="optimisticOracleLivenessTime" size="25" type="text" /></p>
+    <p>Optimistic oracle proposer bond for price requests</p>
+    <p><input maxlength="25" name="jptimisticOracleProposerBond" size="25" type="text" /></p>
+    </small>
+
 
     <!-- Деплой синтетика -->    
     <h2 class="lntxt">Create</h2>
