--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
     <hr />
     <small>
     <p><input name="CreateButton" type="button" value="Create" />&nbsp;&nbsp;<input name="CancelButton" type="button" value="Cancel" />&nbsp;</p>
+    <button onclick="___();">Create</button>&nbsp;&nbsp;<button onclick="___();">Cancel</button>
     <p>Address of the long short pair contract:&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; lspContractAddress</p>
     <p>Address of the long synthetic token contract:&nbsp; &nbsp; &nbsp;longTokenContractAddress</p>
     <p>Address of the short&nbsp;synthetic token contract:&nbsp; &nbsp; &nbsp;shortTokenContractAddress</p>
