--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <td class="val1"><script type="text/javascript">document.write (getNetwork());</script></td>
             <td>Address:</td>
             <td class="val1"><script type="text/javascript">document.write (getUserAddress());</script></td>
-            <td><button onclick="connectWallet();">Connect</button></td>
+            <td><button bgcolor="#0000FF" onclick="connectWallet();">Connect</button></td>
         </tr>
     </table>
 
@@ -252,8 +252,7 @@
     <h2 class="lntxt">Create</h2>
     <hr />
     <small>
-    <p><input name="CreateButton" type="button" value="Create" />&nbsp;&nbsp;<input name="CancelButton" type="button" value="Cancel" />&nbsp;</p>
-    <button onclick="___();">Create</button>&nbsp;&nbsp;<button onclick="___();">Cancel</button>
+    <button bgcolor="#0000FF" onclick="___();">Create</button>&nbsp;&nbsp;<button onclick="___();">Cancel</button>
     <p>Address of the long short pair contract:&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; lspContractAddress</p>
     <p>Address of the long synthetic token contract:&nbsp; &nbsp; &nbsp;longTokenContractAddress</p>
     <p>Address of the short&nbsp;synthetic token contract:&nbsp; &nbsp; &nbsp;shortTokenContractAddress</p>
