--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 		let shortSynthName = "s" + value;
 		localStorage.setItem("longSynthName",longSynthName);
 		localStorage.setItem("shortSynthName",shortSynthName);
+		location.reload();
 	    }
 		
 	    function setSynthSymbol(value) {
@@ -170,6 +171,7 @@
 		let shortSynthSymbol = "s" + value;
 		localStorage.setItem("longSynthSymbol",longSynthSymbol);
 		localStorage.setItem("shortSynthSymbol",shortSynthSymbol);
+		location.reload();
 	    }
 		
 	    function cancelAllData() {
