--- a/index.html
+++ b/index.html
@@ -145,13 +145,17 @@
             function getNetwork() {
                 network = localStorage.getItem("network");
                 console.log('network=' + network);
-                return (network);
+		const st_network = document.getElementById('st_network');
+		st_network.innerHTML = network;
+		return (network);
             }
                 
             function getUserAddress() {
                 user_address = localStorage.getItem("user_address");
                 console.log('user_address=' + user_address);
-                return (user_address);
+		const st_adr = document.getElementById('st_adr');
+		st_adr.innerHTML = user_address;
+	        return (user_address);
             }
 
 	    function setPairName (value) {
@@ -160,9 +164,6 @@
 		let shortSynthName = "s" + value;
 		localStorage.setItem("longSynthName",longSynthName);
 		const n1 = document.getElementById('n1');
-		
-    		console.log('OLD longSynthName=' + n1.innerHTML);
-
 		n1.innerHTML = longSynthName;
 		localStorage.setItem("shortSynthName",shortSynthName);
 		const n3 = document.getElementById('n3');
@@ -229,12 +230,16 @@
         <tr class="status2">
             <td class="logo">LSP</td>
             <td>Network:</td>
-            <td class="val1" id="st_network"><script type="text/javascript">document.write (getNetwork());</script></td>
+            <td class="val1" id="st_network">none</td>
             <td>Address:</td>
-            <td class="val1" id="st_adr"><script type="text/javascript">document.write (getUserAddress());</script></td>
+            <td class="val1" id="st_adr">none</td>
             <td><button onclick="connectWallet();">Connect</button></td>
         </tr>
     </table>
+    <script>
+    	getNetwork();
+	getUserAddress();
+    </scrpt>
 
         
     <!-- Параметры синтетика -->    
